<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.silicongo.george.soundanalyse.RecordJob">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSoundLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SoundLevel"
                android:layout_gravity="center" />

            <ProgressBar
                android:id="@+id/pbSoundLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbEnergyDetectEnable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EnergyDetectEnable" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSettingSoundLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SettingSoundLevel"
                android:layout_gravity="center" />

            <SeekBar
                android:id="@+id/sbSettingSoundLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSettingSoundMuteTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SettingSounduteTime"
                android:layout_gravity="center" />

            <SeekBar
                android:id="@+id/sbSettingSoundMuteTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/StartRecord"
                android:id="@+id/btStartRecord"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
